# Anvil

./: .gitignore  CMakeLists.txt  README.md  anvilw  anvilw.bat  bootstrap.bat  bootstrap.sh  build.cpp  settings.cpp
.bsp/: anvil.json
.github/workflows/: build-release.yaml
src/anvil/: api.hpp  dependency_manager.hpp  driver.cpp  embedded_resources.hpp  ninja.hpp  pkg.hpp  script_compiler.hpp  test.hpp  toolchain.hpp
src/main/: app.hpp  bsp_command.hpp  build_command.hpp  clean_command.hpp  cli.hpp  main.cpp  process.hpp  run_command.hpp  test_command.hpp
src/test/: test_1.cpp  test_main.cpp  test_runner.cpp
wrapper/: anvil-wrapper.properties
